@@ -1,0 +1,6 @@
+source "https://rubygems.org"
+
+# Specify your gem's dependencies in shopify_app.gemspec
+gemspec
+
+gem 'shopify_api', '< 4.3'
