@@ -1,0 +1,9 @@
+source "https://rubygems.org"
+
+# Specify your gem's dependencies in shopify_app.gemspec
+gemspec
+
+gem 'rails', '~> 5.0'
+gem 'activeresource', github: 'rails/activeresource'
+
+gem 'shopify_api', '< 4.3'
