@@ -1,0 +1,8 @@
+class AppProxyController < ApplicationController
+   include ShopifyApp::AppProxyVerification
+
+  def index
+    render layout: false, content_type: 'application/liquid'
+  end
+
+end
