@@ -1,0 +1,19 @@
+<h2>App Proxy Page</h2>
+
+<p>Congratulations! You have successfully configured App Proxy for your shopify application.</p>
+<p>Any valid liquid code included in this page will be parsed and rendered by Shopify.</p>
+
+<br>
+
+<pre>
+Your Shop Details:
+<hr>
+	Shop Name 			: {{ shop.name }}
+	myshopify name 			: {{ shop.permanent_domain }}
+	Primary Domain of Shop 		: {{ shop.domain }}
+	Shop URL 			: {{ shop.url }}
+	Shop Currency 			: {{ shop.currency }}
+	No. of products in this shop 	: {{ shop.products_count }}
+<br>	
+<hr>	
+</pre>
